--- a/Form1.tr-TR.resx
+++ b/Form1.tr-TR.resx
@@ -119,7 +119,7 @@
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="DiceButton.Location" type="System.Drawing.Point, System.Drawing">
-    <value>343, 86</value>
+    <value>405, 99</value>
   </data>
   <data name="DiceButton.Size" type="System.Drawing.Size, System.Drawing">
     <value>89, 30</value>
@@ -127,8 +127,12 @@
   <data name="DiceButton.Text" xml:space="preserve">
     <value>Zar At</value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="ButtonSave.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
+    <value>Popup</value>
+  </data>
   <data name="ButtonSave.Location" type="System.Drawing.Point, System.Drawing">
-    <value>121, 327</value>
+    <value>12, 327</value>
   </data>
   <data name="ButtonSave.Size" type="System.Drawing.Size, System.Drawing">
     <value>136, 56</value>
@@ -137,22 +141,22 @@
     <value>Karakter Olarak Kaydet</value>
   </data>
   <data name="CharName.Size" type="System.Drawing.Size, System.Drawing">
-    <value>170, 27</value>
+    <value>149, 27</value>
   </data>
   <data name="AgeBox1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>188, 12</value>
+    <value>167, 13</value>
   </data>
   <data name="AgeBox1.PlaceholderText" xml:space="preserve">
     <value>Yaş</value>
   </data>
   <data name="AgeBox1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>69, 27</value>
+    <value>66, 27</value>
   </data>
   <data name="GenderBox1.Location" type="System.Drawing.Point, System.Drawing">
     <value>130, 45</value>
   </data>
   <data name="GenderBox1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>127, 28</value>
+    <value>103, 28</value>
   </data>
   <data name="GenderBox1.Text" xml:space="preserve">
     <value>Cinsiyet</value>
@@ -171,7 +175,7 @@
     <value>Karakter Hikayesi</value>
   </data>
   <data name="StoryBox1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>245, 242</value>
+    <value>221, 242</value>
   </data>
   <data name="DiceBox.Items1" xml:space="preserve">
     <value>d8</value>
@@ -181,6 +185,9 @@
   </data>
   <data name="DiceBox.Items3" xml:space="preserve">
     <value>d12</value>
+  </data>
+  <data name="DiceBox.Location" type="System.Drawing.Point, System.Drawing">
+    <value>405, 12</value>
   </data>
   <data name="DiceBox.Size" type="System.Drawing.Size, System.Drawing">
     <value>67, 28</value>
@@ -192,19 +199,19 @@
     <value>0, 0</value>
   </data>
   <data name="Splitter1.MaximumSize" type="System.Drawing.Size, System.Drawing">
-    <value>270, 395</value>
+    <value>399, 395</value>
   </data>
   <data name="Splitter1.MinimumSize" type="System.Drawing.Size, System.Drawing">
-    <value>270, 395</value>
+    <value>399, 395</value>
   </data>
   <data name="Splitter1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>270, 395</value>
+    <value>399, 395</value>
   </data>
   <data name="Splitter1.TabIndex" type="System.Int32, mscorlib">
     <value>9</value>
   </data>
   <data name="DiceResult.Location" type="System.Drawing.Point, System.Drawing">
-    <value>343, 53</value>
+    <value>405, 48</value>
   </data>
   <data name="DiceResult.Size" type="System.Drawing.Size, System.Drawing">
     <value>89, 30</value>
@@ -216,16 +223,19 @@
     <value>20</value>
   </data>
   <data name="DiceHistory.Location" type="System.Drawing.Point, System.Drawing">
-    <value>498, 12</value>
+    <value>498, 45</value>
   </data>
   <data name="DiceHistory.Size" type="System.Drawing.Size, System.Drawing">
-    <value>123, 104</value>
+    <value>123, 84</value>
+  </data>
+  <data name="DiceNumeric.Location" type="System.Drawing.Point, System.Drawing">
+    <value>567, 12</value>
   </data>
   <data name="DiceNumeric.Size" type="System.Drawing.Size, System.Drawing">
     <value>54, 27</value>
   </data>
   <data name="Label1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>349, 15</value>
+    <value>478, 15</value>
   </data>
   <data name="Label1.Size" type="System.Drawing.Size, System.Drawing">
     <value>83, 27</value>
@@ -233,8 +243,68 @@
   <data name="Label1.Text" xml:space="preserve">
     <value>+ Modifier</value>
   </data>
+  <data name="FizikselListBox.ItemHeight" type="System.Int32, mscorlib">
+    <value>20</value>
+  </data>
+  <data name="FizikselListBox.Size" type="System.Drawing.Size, System.Drawing">
+    <value>146, 144</value>
+  </data>
+  <data name="FizikselÖzellik.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
+    <value>Popup</value>
+  </data>
+  <data name="FizikselÖzellik.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="FizikselÖzellik.Location" type="System.Drawing.Point, System.Drawing">
+    <value>239, 327</value>
+  </data>
+  <data name="FizikselÖzellik.Size" type="System.Drawing.Size, System.Drawing">
+    <value>146, 29</value>
+  </data>
+  <data name="FizikselÖzellik.Text" xml:space="preserve">
+    <value>Fiziksel Özellik Ekle</value>
+  </data>
+  <data name="KişiselListBox.ItemHeight" type="System.Int32, mscorlib">
+    <value>20</value>
+  </data>
+  <data name="KişiselListBox.Size" type="System.Drawing.Size, System.Drawing">
+    <value>146, 164</value>
+  </data>
+  <data name="KişiselÖzellik.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
+    <value>Popup</value>
+  </data>
+  <data name="KişiselÖzellik.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="KişiselÖzellik.Location" type="System.Drawing.Point, System.Drawing">
+    <value>239, 354</value>
+  </data>
+  <data name="KişiselÖzellik.Size" type="System.Drawing.Size, System.Drawing">
+    <value>146, 29</value>
+  </data>
+  <data name="KişiselÖzellik.Text" xml:space="preserve">
+    <value>Kişisel Özellik Ekle</value>
+  </data>
+  <data name="CheckedListBox1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>405, 144</value>
+  </data>
+  <data name="CheckedListBox1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>216, 246</value>
+  </data>
+  <data name="Splitter2.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
+    <value>Bottom</value>
+  </data>
+  <data name="Splitter2.MaximumSize" type="System.Drawing.Size, System.Drawing">
+    <value>234, 260</value>
+  </data>
+  <data name="Splitter2.MinimumSize" type="System.Drawing.Size, System.Drawing">
+    <value>234, 260</value>
+  </data>
+  <data name="Splitter2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>234, 260</value>
+  </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>633, 395</value>
+    <value>628, 395</value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -312,7 +382,6 @@
         AAPgAAAH8AAAD/gAAB/8AAA//wAA///AA/8=
 </value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
     <value>CenterScreen</value>
   </data>
